changing some codes

--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <div class="converter-container">
         <div class="converter-card">
             <h2>Length Converter</h2>
-            <p>Convert between meters, centimeters, inches, feet, and more.</p>
+            <p>Convert between meters, centimeters, and more.</p>
             <a href="src/page/Measure-Converter.html">Convert Length</a>
         </div>
 
         <div class="converter-card">
             <h2>Mass Converter</h2>
-            <p>Convert between kilograms, grams, pounds, ounces, and more.</p>
+            <p>Convert between kilograms, grams, and more.</p>
             <a href="src/page/Mass-Converter.html">Convert Mass</a>
         </div>
     </div>
