adding upcoming measurement

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
             <p>Convert between kilograms, grams, and more.</p>
             <a href="src/page/Mass-Converter.html">Convert Mass</a>
         </div>
+
+        <div class="converter-card">
+            <h2>Upcoming</h2>
+            <p>Coming Soon</p>
+            <a href="#">Coming Soon</a>
+        </div>
     </div>
 
     <script src="src/theme.js"></script>
