adding favicon and imperial units

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/landing.css">
+    <link rel="icon" type="image/x-icon" href="assets/favicon/favicon.ico">
     <title>Unit Converter</title>
 </head>
 <body>
@@ -15,13 +16,13 @@
     <div class="converter-container">
         <div class="converter-card">
             <h2>Length Converter</h2>
-            <p>Convert between meters, centimeters, and more.</p>
+            <p>Convert between meters, centimeters, kilometers, miles, and imperial units.</p>
             <a href="src/page/Length-Converter.html">Convert Length</a>
         </div>
 
         <div class="converter-card">
             <h2>Mass Converter</h2>
-            <p>Convert between kilograms, grams, and more.</p>
+            <p>Convert between kilograms, grams, micrograms, milligrams, pounds, ounces, and tons.</p>
             <a href="src/page/Mass-Converter.html">Convert Mass</a>
         </div>
 
